--- a/main.html
+++ b/main.html
@@ -1,8 +1,34 @@
 
 <head>
-
+    <style>
+        *{
+            font-family: Arial;
+            padding: 0;
+            margin: 0;
+            background-color: rgb(34,33,32);
+        }
+        .main-container{
+            display: flex;
+        }
+        #container-right, #container-left {
+            padding: 15px;
+            width: 50vw;
+            text-align: center;
+            justify-content: center;
+            align-items: center;
+            color: #fff;
+        }
+    </style>
 </head>
 
 <body>
-    
+    <div class="main-container">
+        <div class="default-box" id="container-left">
+            <h1>I'am on the left</h1>
+        </div>
+
+        <div class="defualt-box" id="container-right">
+            <h1>I'am on the right</h1>
+        </div>
+    </div>
 </body>
