adding default styles

--- a/windows/createDatabase.html
+++ b/windows/createDatabase.html
@@ -1,27 +1,16 @@
 
 <head>
+    <link rel="stylesheet" href="../styles/default.css">
     <style>
-        *{
-            font-family: Arial;
-            padding: 0;
-            margin: 0;
-            background-color: rgb(34,33,32);
-        }
-        .main-container{
-            display: flex;
-        }
-        .main-box{
-            padding: 15px;
-            width: 50vw;
-            text-align: center;
-            justify-content: center;
-            align-items: center;
-            color: #fff;
-        }
+        
     </style>
 </head>
 
 <body>
+    <div class="back-to-main-menu">
+        <h2 class="back-to-main-menu-h2">Menu</h2>
+    </div>
+
     <div class="main-container">
         <div class="main-box" id="container-left">
             <h1>I'am on the left</h1>
