--- a/windows/editDatabase.html
+++ b/windows/editDatabase.html
@@ -1,23 +1,8 @@
 
 <head>
+    <link rel="stylesheet" href="../styles/default.css">
     <style>
-        *{
-            font-family: Arial;
-            padding: 0;
-            margin: 0;
-            background-color: rgb(34,33,32);
-        }
-        .main-container{
-            display: flex;
-        }
-        .main-box{
-            padding: 15px;
-            width: 50vw;
-            text-align: center;
-            justify-content: center;
-            align-items: center;
-            color: #fff;
-        }
+        
     </style>
 </head>
 
