--- a/windows/createDatabase.html
+++ b/windows/createDatabase.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <div class="back-to-main-menu">
+    <div class="back-to-main-menu" id="back-to-menu">
         <h2 class="back-to-main-menu-h2">Menu</h2>
     </div>
 
@@ -24,4 +24,16 @@
             <h1>I'am on the right</h1>
         </div>
     </div>
+
+    <script>
+
+        const backToMainMenu = document.getElementById('back-to-menu');
+
+        // hide the current window and show the main menu
+        backToMainMenu.addEventListener('click', () => {
+            window.ipcRenderer.send('back-to-main-menu');
+        });
+
+    </script>
+
 </body>
