--- a/windows/editDatabase.html
+++ b/windows/editDatabase.html
@@ -7,6 +7,10 @@
 </head>
 
 <body>
+    <div class="back-to-main-menu" id="back-to-menu">
+        <h2 class="back-to-main-menu-h2">Menu</h2>
+    </div>
+
     <div class="main-container">
         <div class="main-box" id="container-left">
             <h1>I'am on the left</h1>
@@ -20,4 +24,15 @@
             <h1>I'am on the right</h1>
         </div>
     </div>
+
+    <script>
+        
+        const backToMainMenu = document.getElementById('back-to-menu');
+
+        // hide the current window and show the main menu
+        backToMainMenu.addEventListener('click', () => {
+            window.ipcRenderer.send('back-to-main-menu');
+        });
+
+    </script>
 </body>
