--- a/windows/createDatabase.html
+++ b/windows/createDatabase.html
@@ -24,6 +24,7 @@
             padding-left: 25px;
             color:#fff;
             -webkit-appearance: none;
+            appearance: none; /* Standard property for compatibility */
         }
 
         .input::-webkit-inner-spin-button,
@@ -52,6 +53,7 @@
         #databaseTableName{
             display: none;
         }
+
     </style>
 </head>
 
@@ -68,6 +70,7 @@
             <input type="text" class="input" id="databaseName" name="databaseName" placeholder="Enter a database name: ">
             <input type="number" class="input" id="databaseTableNumber" name="databaseTableNumber" placeholder="Enter the number of tables: ">
             <input type="text" class="input" id="databaseTableName" name="databaseTableName" placeholder="Enter the name of the table 1: ">
+
 
         </div>
         <div class="main-box">
@@ -93,13 +96,18 @@
         let tablesDone = 0;
         const tablesNames = [];
 
+        // get the number of columns to each table
+        let numberOfColumnsProvided = 0;
+
+        // get tables objects
+        const tables = [];
+
         function getNextTableName() {
             if (tablesDone < $numberOfTables) {
                 databaseTableName.value = null;
                 databaseTableName.placeholder = `Enter the name of the table ${tablesDone + 1}`;
             } else {
-                // All tables have been entered, you can do something with the collected table names.
-                console.log(tablesNames);
+                // All tables have been named
                 return;
             }
         }
@@ -113,12 +121,12 @@
                 getNextTableName();
 
             } else {
-                getNextTableName();
+                
             }
         });
 
 
-
+        // Write this whole thing again cuz i am stupid
         next.addEventListener("click", () => {
             if(databaseNameInput.value.trim() === "" && nextStatus == 0){
                 // Do nothing
@@ -134,11 +142,13 @@
                 // Do nothing
             } else {
                 $numberOfTables = Number(databaseTableNumber.value);
-
-                nextStatus = 2;
-                databaseTableNumber.style.display = "none";
-                databaseTableName.style.display = "inline";
-                
+                if(nextStatus != 2){
+                    nextStatus = 2; 
+                    console.log(nextStatus) 
+                    databaseTableNumber.style.display = "none";
+                    databaseTableName.style.display = "inline"; 
+                    console.log(databaseTableName.style.display) 
+                }            
             }
         });
 
