Added form generation for columns setup

--- a/windows/createDatabase.html
+++ b/windows/createDatabase.html
@@ -76,6 +76,12 @@
             <input type="number" class="input" id="numberOfColumns" placeholder="Enter the number of columns: ">
 
 
+            <div id="form-container">
+                <form id="form">
+                    <!-- Form fields will be generated here -->
+                </form>
+            </div>
+
 
         </div>
         <div class="main-box">
