--- a/windows/createDatabase.html
+++ b/windows/createDatabase.html
@@ -43,7 +43,7 @@
             max-width: 200px;
         }
 
-        .notNullCheckbox{
+        .checkboxForm{
             height: 45px;
             width: 45px;
             margin-left: 10px;
