adding the column creator

--- a/windows/temp.html
+++ b/windows/temp.html
@@ -35,7 +35,7 @@
             display: none;
         }
 
-        .add-table{
+        .option-button{
             position: absolute;
             top: 0;
             right: 0;
@@ -46,7 +46,7 @@
             cursor: pointer;
             transition: all ease 0.1s;
             display: none;
-        } .add-table-h2{
+        } .option-button-h2{
             transition: all ease 0.1s; 
             padding-left: 5px;
             padding-right: 5px;
@@ -55,9 +55,19 @@
             font-size: 1.5em;
         }
 
-        .add-table:hover, .add-table-h2:hover{
+        .option-button:hover, .option-button-h2:hover{
             background-color: #fff;
             color: black;
+        }
+
+        .back-to-the-table-creator{
+            display: none;
+            left: 0;
+            right: unset;
+        }
+
+        .add-column{
+            display: none;
         }
 
         .table-creator-button{
@@ -97,6 +107,11 @@
             color: black;
             background-color: #fff;
         }
+
+        #editColumnsContainer{
+            display: none;
+        }
+
     </style>
 </head>
 
@@ -105,9 +120,18 @@
         <h2 class="back-to-main-menu-h2">Menu</h2>
     </div>
 
-    <div class="add-table" id="add-table">
-        <h2 class="add-table-h2">Add a new table</h2>
+    <div class="add-table option-button" id="add-table">
+        <h2 class="option-button-h2">Add a new table</h2>
     </div>
+
+    <div class="back-to-the-table-creator option-button" id="back-to-tables">
+        <h2 class="option-button-h2">Back to the table creator</h2>
+    </div>
+
+    <div class="add-column option-button" id="add-column">
+        <h2 class="option-button-h2">Add a new column</h2>
+    </div>
+
 
     <div class="main-container">
         <div class="main-box" id="container-middle">
@@ -118,6 +142,10 @@
 
             <div id="newTableContainer">
 
+            </div>
+
+            <div id="editColumnsContainer">
+                
             </div>
         </div>
         
